# T-lite-helpdesk

./: README.md  compose.yaml  shell.nix
api/: .dockerignore  Dockerfile  Makefile  pyproject.toml
api/app/: app.py  dependencies.py  routes.py  schemas.py  services.py  state.py
bot/: Dockerfile  main.py  pyproject.toml  requirements.txt
bot/src/: bot.py  handlers.py
