[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["BeaverNotACat <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["standard"], version = "^2.11.0"}
transformers = "^4.44.2"
torch = "^2.4.1"
uvicorn = "^0.30.6"
accelerate = "^0.34.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.4"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
