[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["BeaverNotACat <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyTelegramBotAPI = "^4.22.1"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
